# parsec

./: .env.example  README.md  pyproject.toml  requirements.txt  test_backend.py  test_output.txt  text
api/: main.py
api/routes/: analysis.py  auth.py  git.py  pr.py  repo.py  report.py
api/services/: ast_analyzer.py  astra_changelogs.py  auth_utils.py  dependency_parser.py  gemini_llm.py  git_operations.py  git_visualizer.py  github_auth.py  github_repo.py  griffe_analyser.py  pr_generator.py  report_generator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  GitGraph.jsx  GitOperations.jsx
